# Journey_FullStack

./: .env.example  .env.exmaple  .env.local  .eslintrc  .gitignore  .prettierrc  ARCHITECTURE.md  Dockerfile  LICENSE.md  README.md  build.sh  bun.lockb  config.env  db.sqlite3  drizzle.config.ts  electron-builder.yml  eslint.config.js  gunicorn-cfg.py  index.html  main.css  main0.css  next.config.js  next.config.mjs  package-lock.json  package.json  prettier.config.js  render.yaml  run.py  tailwind.config.js  tailwind.config.ts  tailwind.css  tailwind0.css  test.js  theme.html  theme0.html  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/: CODEOWNERS  dependabot.yml
API_s.o.l.i.d_TS/: README.md  package-lock.json  package.json
Beth_Template/: README.md
HTMX_Fast_Api/: README.md
Hono-Postgres/: .env.example  .gitignore  README.md  biome.json  drizzle.config.ts  jest.config.js  package.json  tsconfig.json
RAG-streamlit/: .gitattributes  .gitignore  README.md
RAG-streamlit/backend/: Dockerfile  README.md  pyproject.toml  test_notebook.ipynb
RAG-streamlit/backend/src/: .env-template  __init__.py  app.py  langgraph_agent.py  models.py  prompts.yaml  tools.py
RAG-streamlit/frontend/: Dockerfile  README.md  pyproject.toml
RAG-streamlit/frontend/src/: .env-template  api_client.py  app.py
RAG-streamlit/frontend/tests/: conftest.py  test_app.py
RAG-streamlit/pipelines/: README.md  config.yaml  pipeline.py  pyproject.toml
RAG-streamlit/pipelines/tests/: test_pipeline.py
__tests__/: scoreHistory.test.ts  store.test.ts
admin/: package-lock.json
angular-s.o.l.i.d-advanced/: package-lock.json  package.json
app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
apps/: __init__.py  config.py  db.sqlite3  models.py
astro-starter/: README.md  astro.config.mjs  package.json  tailwind.config.js
backend/: .gitignore  main.py  main_txt_backup.py
client/: Dockerfile  index.html  package-lock.json  package.json
components/: Confetti.tsx  ErrorBoundary.tsx  MusicToggle.tsx  ThemeToggle.tsx  TimedModeToggle.tsx
frontend/: package-lock.json
hospital-management/: README.md  stress-test.sh
js/: commands.js  main.js
learning-doc/: .env.example  .gitignore  README.md  app.vue  components.json  error.vue  knip.json  mdx-components.tsx  middleware.ts  next.config.js  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json
lib/: api.ts  scoreHistory.ts  sounds.ts  utils.ts
nestjs-s.o.l.i.d/: package.json
next-prisma-starter/: README.md  package.json
nodejs-s.o.l.i.d/: .env.example  .gitignore  README.md  package.json
prisma/: schema.prisma
(+810 files in other folders)
